# trivial_cmake_lib_b

./: CMakeLists.txt
src/: trivial_cmake_lib_b.cc  trivial_cmake_lib_b.h
